# stm32g4-rust-test

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: main.rs
